k8s/chat-front1-py.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-front1-py
  labels:
    app: chat-front1-py
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-front1-py
  template:
    metadata:
      labels:
        app: chat-front1-py
    spec:
      containers:
        - name: chat-front1-py
          image: localhost/chat-front1-py:latest
          imagePullPolicy: Never
